vscode dev environment

--- a/ms-foo/Dockerfile
+++ b/ms-foo/Dockerfile
@@ -5,7 +5,7 @@ RUN apt-get update && \
     apt-get install curl -y
 
 
-# stage development
+# stage prod
 FROM base as prod
 
 RUN npm i -g ts-node typescript
@@ -22,16 +22,13 @@ CMD ts-node server.ts
 
 
 # stage development
-FROM base as development
+FROM mcr.microsoft.com/devcontainers/typescript-node:1-20-bullseye as development
 
 RUN npm i -g nodemon ts-node typescript
 
-WORKDIR /app
-
-COPY package.json yarn.lock .
+WORKDIR /workspace/ms-foo
 
 RUN yarn
 
-COPY . .
-
 CMD nodemon
+
