--- a/ms-foo/.devcontainer.json
+++ b/ms-foo/.devcontainer.json
@@ -1,9 +1,19 @@
 // For format details, see https://aka.ms/devcontainer.json. For config options, see the
 // README at: https://github.com/devcontainers/templates/tree/main/src/typescript-node
 {
-	"name": "Node.js & TypeScript",
+	"name": "ms-foo (Node.js & TypeScript)",
 	// Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
-	"image": "mcr.microsoft.com/devcontainers/typescript-node:1-20-bullseye"
+	// "image": "mcr.microsoft.com/devcontainers/typescript-node:1-20-bullseye"
+	"dockerComposeFile": [
+		"../docker-compose.yaml",
+		"../.docker-compose-dev.yaml"
+	],
+	"service": "ms-foo",
+
+	"shutdownAction": "none",
+
+	// Open the sub-folder with the source code
+	"workspaceFolder": "/workspace/ms-foo"
 
 	// Features to add to the dev container. More info: https://containers.dev/features.
 	// "features": {},
