open with docker dev

--- a/ms-foo/.devcontainer.json
+++ b/ms-foo/.devcontainer.json
@@ -5,8 +5,7 @@
 	// Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
 	// "image": "mcr.microsoft.com/devcontainers/typescript-node:1-20-bullseye"
 	"dockerComposeFile": [
-		"../docker-compose.yaml",
-		"../.docker-compose-dev.yaml"
+		"../compose-dev.yaml"
 	],
 	"service": "ms-foo",
 
