--- a/ms-foo/Dockerfile
+++ b/ms-foo/Dockerfile
@@ -22,7 +22,22 @@ CMD ts-node server.ts
 
 
 # stage development
-FROM mcr.microsoft.com/devcontainers/typescript-node:1-20-bullseye as development
+# FROM mcr.microsoft.com/devcontainers/typescript-node:1-20-bullseye as development
+FROM base as development
+
+RUN <<EOF
+apt-get install git -y
+EOF
+
+RUN <<EOF
+#addgroup -S docker
+groupadd docker
+#adduser -S --shell /bin/bash --ingroup docker vscode
+useradd -m -s /bin/bash -g docker vscode
+EOF
+
+# install Docker tools (cli, buildx, compose)
+COPY --from=gloursdocker/docker / /
 
 RUN npm i -g nodemon ts-node typescript
 
