--- a/ms-helo/.devcontainer.json
+++ b/ms-helo/.devcontainer.json
@@ -3,15 +3,16 @@
 {
 	"name": "ms-helo (Node.js & TypeScript)",
 	// Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
+	// "image": "mcr.microsoft.com/devcontainers/typescript-node:1-20-bullseye"
 	"dockerComposeFile": [
-		"../docker-compose.yaml",
-		"../.docker-compose-dev.yaml"
+		"../compose-dev.yaml"
 	],
 	"service": "ms-helo",
+
 	"shutdownAction": "none",
+
 	// Open the sub-folder with the source code
 	"workspaceFolder": "/workspace/ms-helo"
-
 
 	// Features to add to the dev container. More info: https://containers.dev/features.
 	// "features": {},
