--- a/compose-dev.yaml
+++ b/compose-dev.yaml
@@ -33,6 +33,7 @@ services:
       source: /var/run/docker.sock
       target: /var/run/docker.sock
     - .:/workspace:cached
+    - /workspace/ms-helo/node_modules:cached
 
   # micro-service foo
   ms-foo:
@@ -52,4 +53,5 @@ services:
       source: /var/run/docker.sock
       target: /var/run/docker.sock
     - .:/workspace:cached
+    - /workspace/ms-foo/node_modules:cached
 
