--- a/compose-dev.yaml
+++ b/compose-dev.yaml
@@ -33,7 +33,7 @@ services:
       source: /var/run/docker.sock
       target: /var/run/docker.sock
     - .:/workspace:cached
-    - /workspace/ms-helo/node_modules
+    - ./ms-helo/node_modules:/workspace/ms-helo/node_modules:cached
 
   # micro-service foo
   ms-foo:
@@ -53,5 +53,5 @@ services:
       source: /var/run/docker.sock
       target: /var/run/docker.sock
     - .:/workspace:cached
-    - /workspace/ms-foo/node_modules
+    - ./ms-foo/node_modules/workspace/ms-foo/node_modules:cached
 
