--- a/compose-dev.yaml
+++ b/compose-dev.yaml
@@ -19,10 +19,11 @@ services:
   ms-helo:
     build:
       context: ./ms-helo
-      target: development
+      target: dev-env
     ports:
       - 4001:4001
     volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
       - .:/workspace
       - /workspace/ms-helo/node_modules
     restart: unless-stopped
@@ -36,10 +37,11 @@ services:
   ms-foo:
     build:
       context: ./ms-foo
-      target: development
+      target: dev-env
     ports:
       - 4002:4002
     volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
       - .:/workspace
       - /workspace/ms-foo/node_modules
     restart: unless-stopped
